syntax = "proto3";

package people.v1;

import "google/protobuf/descriptor.proto";

import "google/protobuf/empty.proto";

message EmailAddress {
  string display_name = 1;

  string value = 2;
}

message ListContactsResponse {
  repeated Person contacts = 1;
}

message Name {
  string display_name = 1;

  string display_name_last_first = 2;

  string family_name = 3;

  string given_name = 4;
}

message Person {
  string id = 1;

  Name name = 2;

  repeated EmailAddress email_addresses = 3;
}

message ContactsListRequest {
  int64 max_results = 1;
}

message ContactsCreateRequest {
  Person person = 1;
}

message ContactsGetRequest {
  string id = 1;
}

message ContactsUpdateRequest {
  string id = 1;

  Person person = 2;
}

message ContactsDeleteRequest {
  string id = 1;
}

service People {
  rpc ContactsList ( ContactsListRequest ) returns ( ListContactsResponse ) {
  }
  rpc ContactsCreate ( ContactsCreateRequest ) returns ( Person ) {
  }
  rpc ContactsUpdate ( ContactsUpdateRequest ) returns ( Person ) {
  }
  rpc ContactsDelete ( ContactsDeleteRequest ) returns ( google.protobuf.Empty ) {
  }
}

